--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <h2 data-lang="contactTitle">Контакты</h2>
     <p data-lang="contactText">Свяжись со мной:</p>
     <ul>
-      <li>Email: <a href="mailto:your@email.com">your@email.com</a></li>
-      <li>Telegram: <a href="https://t.me/yourusername">@yourusername</a></li>
+      <li>Email: <a href="mailto:your@email.com">k96321014@gmail.com</a></li>
+
     </ul>
   </section>
 
